--- a/assets/Lyricer/index.html
+++ b/assets/Lyricer/index.html
@@ -7,13 +7,18 @@
 	<link rel="stylesheet" href="lyricer-1.0.0.css">
 </head>
 <body>
+	<audio id="player" controls>
+	  <source src="Only Time.mp3" type="audio/mpeg">
+	</audio>
 	<div id="lyricer">
-		
 	</div>
 	<script type="text/javascript">
-	var text = "[ti:起床]\n[ar:无印良品]\n[al:想见你]\n\n[00:01.00]起床\n[00:07.00]作词:王裕宗 作曲:品冠\n[00:11.50]演唱：无印良品\n[00:18.98]\n[00:26.00]走在异乡陌生的夜里\n[00:30.78]一个人淋着孤独的细雨\n[00:34.15]没有你的城市 这特别冷的冬季\n[00:39.27]\n[00:42.15]抱着思念沉沉的睡去\n[00:45.91]隔天醒来第一件事情\n[00:49.75]就是好好想你\n[02:06.35]没有你的城市 这特别冷的冬季\n[02:11.35]抱着思念沉沉的睡去\n[02:18.26]隔天醒来第一件事情\n[02:21.84]就是好好想你\n[02:23.80]在心里写信给你\n[02:27.31]我曾经是那么幸福 因为有你\n[02:33.52]抱着你 轻轻说我爱你\n[02:37.28]静静听你\n[02:39.05]清柔呼吸\n[02:41.05]离我好近好近\n[02:44.62]多希望明天睡醒\n[02:47.03]身边有你\n[02:48.93]继续留在我的怀抱里\n[02:52.82]不曾离去\n[02:54.17]是我作了梦而已\n[02:57.85]\n[03:00.01]没有离去 是我做了梦而已\n[03:10.36]\n[03:28.55]（歌手独白）\n[00:51.79]在心里写信给你\n[00:54.87]我曾经多麽幸运\n[00:59.31]天天有你\n[01:01.26]抱着你 轻轻说我爱你\n[01:05.19]静静听你\n[01:06.89]清柔呼吸\n[01:08.65]离我好近好近\n[01:12.01]多希望明天睡醒\n[01:14.61]身边有你\n[01:16.42]继续留在我的怀抱里\n[01:19.93]不曾离去\n[01:22.09]是我作了梦而已\n[01:25.71]\n[01:59.35]走在异乡陌生的夜里\n[02:02.71]一个人淋着孤独的细雨\n";
+	var text = "[00:02.70]Only Time\n[00:04.70]enya\n[00:06.70]\n[00:12.66]Who can say where the road goes,\n[00:17.91]Where the day flows\n[00:20.65]Only time...\n[00:24.04]And who can say if your love grows,\n[00:29.34]As your heart chose\n[00:32.35]Only time...\n[00:34.13]\n[01:02.33]Who can say why your heart sighs,\n[01:07.12]As your love flies\n[01:10.06]Only time...\n[01:13.48]And who can say why your heart cries,\n[01:18.70]When your love dies\n[01:21.59]Only time...\n[01:23.70]\n[01:51.31]Who can say when the roads meet,\n[01:56.37]That love might be,\n[01:59.19]In your heart.\n[02:02.72]And who can say when the day sleeps,\n[02:07.93]If the night keeps all your heart\n[02:14.63]Night keeps all your heart...\n[02:18.83]\n[02:45.14]Who can say if your love grows,\n[02:50.05]As your heart chose\n[02:53.08]Only time...\n[02:56.26]And who can say where the road goes,\n[03:01.59]Where the day flows\n[03:04.63]Only time...\n[03:08.33]Who knows\n[03:10.35]Only time...\n[03:14.12]Who knows\n[03:16.33]Only time...\n[03:19.12]";
 	var lrc = new Lyricer(text);
-	
+	var audio = document.getElementById("player");
+	audio.addEventListener( "timeupdate", function () {
+		lrc.move(audio.currentTime);
+	} );
 	</script>
 </body>
 </html>
